# ThreeBodyCalendar

./: .gitignore  CMakeLists.txt  README.md  ThreeBodyCalendar.cpp  ThreeBodyCalendar.h
.github/workflows/: ci.yml
include/core/: Vector3D.h
include/physics/: CelestialBody.h  GravityEngine.h  Integrator.h  PhysicsConstants.h
src/: main.cpp
src/core/: Vector3D.cpp
src/physics/: CelestialBody.cpp  GravityEngine.cpp  Integrator.cpp
tests/: GravityEngineTests.cpp
